# tradnex-v2

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.python  LICENSE  README.md  docker-compose.dev-host.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
deploy/: dockge-stack.yml
frontend/: .dockerignore  .eslintrc.json  Dockerfile.frontend  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
infra/: Caddyfile
migrations/: 0001_initial.sql  0002_watchlists.sql  0003_correlation_snapshots.sql  0004_seed_universe.sql  0005_extend_candidates.sql  0006_exit_engine.sql  0007_orchestrator.sql  0008_evaluator.sql  0008_seed_prompts.sql  0009_users_sessions.sql  0010_credentials.sql  0011_schwab_client_credential.sql  0012_mcp_credential.sql
prompts/: evaluation.md
scripts/: schwab_auth.py
shared/: config.py  db.py  events.py
tests/: _api_helpers.py  _credential_helpers.py  test_analytics_correlation.py  test_analytics_full_analysis.py  test_analytics_gap.py  test_analytics_levels.py  test_analytics_momentum.py  test_analytics_options_flow.py  test_analytics_options_full.py  test_analytics_options_gex.py  test_analytics_options_greeks_aggregation.py  test_analytics_options_iv.py  test_analytics_options_pain.py  test_analytics_options_zero_dte.py  test_analytics_regime.py  test_analytics_trend.py  test_analytics_volatility.py  test_analytics_volume.py  test_api_auth.py  test_api_candidates.py  test_api_credentials.py  test_api_dashboard.py  test_api_data_status.py  test_api_middleware.py  test_api_positions.py  test_api_prompts.py  test_api_runtime_toggles.py  test_api_settings_system.py  test_api_watchlist_universe.py  test_auth_service.py  test_calendar_mock.py  test_calendar_refresh_task.py  test_calendar_service.py  test_claude_cli_mock.py  test_claude_cli_real.py  test_correlation_task.py  test_credentials_migration.py  (+58 more)
(+231 files in other folders)
